# coco-fono-pro

./: .gitignore  app.py  config.py  crea_usuarios.py  pyproject.toml  requirements.txt  styles.py
components/: formulario.py
core/: db.py
dashboards/: admin.py  admin_commissions.py  admin_delete_emitters.py  admin_reports.py  admin_users.py  admin_verification.py  user.py
models/: schema.py
services/: analytics.py  auth.py  commission_engine.py  commission_initializer.py  emitter.py  report_service.py  user_service.py
